--- a/.jupyter/custom/custom.css
+++ b/.jupyter/custom/custom.css
@@ -1,8 +1,7 @@
-/* hiding the extension toolbar buttons
+/* hiding some toolbar buttons */
 button[title="Save and Checkpoint"] {
     display: none !important;
 }
-*/
 button[title="insert cell below"] {
     display: none !important;
 }
@@ -24,6 +23,10 @@ button[title="move selected cells up"] {
 }
 
 button[title="move selected cells down"] {
+    display: none !important;
+}
+
+button[title="toggle automatic scrolling down"] {
     display: none !important;
 }
 
