--- a/.jupyter/custom/custom.css
+++ b/.jupyter/custom/custom.css
@@ -1,6 +1,19 @@
 /*
 hiding unnneded toolbar buttons
 */
+
+/*
+hiding the whole save-to-browser-storage button group */
+#save-notbook {
+    display: none !important;
+}
+
+/*
+button[title="Save and Checkpoint"] {
+    display: none !important;
+}
+*/
+
 button[title="insert cell below"] {
     display: none !important;
 }
