--- a/.jupyter/custom/custom.css
+++ b/.jupyter/custom/custom.css
@@ -116,3 +116,30 @@ ensuring no offset from first button group
 .toolbar-inner.navbar-inner.navbar-nobg .btn-group:first-of-type {
     margin-left: 0 !important;
 }
+
+
+/* Kill navbar/container left padding */
+#maintoolbar,
+#maintoolbar .navbar-inner,
+#maintoolbar #maintoolbar-container {
+  padding-left: 0 !important;
+  margin-left: 0 !important;
+}
+
+/* Optional: nuke the clearfix pseudo-elements just in case */
+#maintoolbar::before,
+#maintoolbar::after {
+  content: none !important;
+  display: none !important;
+}
+
+
+/* Remove left margin from ALL groups… */
+#maintoolbar-container .btn-group {
+  margin-left: 0 !important;
+}
+
+/* …then add spacing only between *visible* adjacent groups */
+#maintoolbar-container .btn-group + .btn-group {
+  margin-left: 5px !important;  /* tweak to taste */
+}
