--- a/.jupyter/custom/custom.css
+++ b/.jupyter/custom/custom.css
@@ -48,6 +48,7 @@ button[title="Toggle split/centered cell style"] {
     display: none !important;
 }
 
+/*
 button[title="lift restrictions from selected cells"] {
     display: none !important;
 }
@@ -59,6 +60,7 @@ button[title="make selected cells read-only"] {
 button[title="freeze selected cells"] {
     display: none !important;
 }
+*/
 
 /* hiding Binder buttons */
 button[title="Download visible"] {
